--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gekko",
   "version": "0.5.11",
-  "description": "A bitcoin trading bot for auto trading at various exchanges",
+  "description": "Cool bitcoin trading bot for auto trading at various exchanges",
   "keywords": [
     "trading",
     "bot",
@@ -17,7 +17,7 @@
   "dependencies": {
     "@slack/client": "^3.10.0",
     "async": "2.1.2",
-    "binance": "^1.0.2",
+    "binance": "^1.1.0",
     "bitcoin-co-id": "0.0.1",
     "bitexthai": "^0.1.0",
     "bitfinex-api-node": "^1.2.0",
@@ -54,7 +54,7 @@
     "relieve": "^2.1.3",
     "retry": "^0.10.1",
     "semver": "5.4.1",
-    "sqlite3": "^3.1.8",
+    "sqlite3": "^3.1.13",
     "stats-lite": "^2.0.4",
     "tiny-promisify": "^0.1.1",
     "toml": "^2.3.0",
@@ -65,6 +65,8 @@
     "chai": "^2.0.0",
     "mocha": "^2.1.1",
     "proxyquire": "^1.7.10",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "sinon": "^1.12.2"
   },
   "engines": {
