--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "test": "./node_modules/.bin/mocha test/*.js --recursive test -u tdd --reporter spec",
-    "start": "node ./gekko --ui"
+    "start": "node gekko --ui"
   },
   "author": "Mike van Rossum <mike@mvr.me>",
   "dependencies": {
